[gd_scene load_steps=7 format=3 uid="uid://bmstsxvaf5c6v"]

[ext_resource type="Texture2D" uid="uid://cdapwcamrf772" path="res://Assets/enemypng.png" id="1_h2skw"]
[ext_resource type="Script" path="res://Scenes/enemy.gd" id="1_j13rv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5a1x"]
size = Vector2(14, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phsjw"]
size = Vector2(14, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_w2ewk"]
radius = 427.117

[sub_resource type="CircleShape2D" id="CircleShape2D_714ma"]
radius = 405.123

[node name="enemy" type="CharacterBody2D" groups=["EnemyGroup"]]
collision_layer = 2
script = ExtResource("1_j13rv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_j5a1x")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_h2skw")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_phsjw")

[node name="PlayerDetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectArea"]
shape = SubResource("CircleShape2D_w2ewk")

[node name="ShootTimer" type="Timer" parent="."]

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(0, -8.085)

[node name="ShootDetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootDetectArea"]
shape = SubResource("CircleShape2D_714ma")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="PlayerDetectArea" to="." method="_on_player_detect_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectArea" to="." method="_on_player_detect_area_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="ShootDetectArea" to="." method="_on_shoot_detect_area_body_entered"]
[connection signal="body_exited" from="ShootDetectArea" to="." method="_on_shoot_detect_area_body_exited"]
